--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,12 +1,28 @@
-Version 2.20. Changelog:
-
-> Updates From The Hanan Mods Server🇱🇰
->Based on the latest version of Google Play 25.6.2
-> Added a personal photo upload button
-> Setting profile picture download path now affects downloading stories
-> Ads have been permanently removed
-> Add author tag to the name of the downloaded file
-> Fixed likes and subscriptions issue
-> Fixed video rewind issue
-> Fixed connection issue for some users
-> Other small fixes and improvements
+Version 2.00. Changelog:
+> Updates From HananMods🇱🇰💥
+> Based on the latest version of Google Play 28.5.4
+> Removed all ads
+> Made video, pictures and GIFs downloading without watermark to Movies/TikTok folder instead of DCIM/Camera
+> Removed all restrictions on downloads, you can download any video
+> Removed many other restrictions
+> The application was cleaned as much as possible
+> Maximum compression + ZipAlign
+> Disabled unnecessary activities
+> Removed restrictions on duets, stitching
+> Rewind is now available in any video
+> Battery drain optimization
+> Removed regional restrictions
+> Fixed Google authorization
+> Fixed Facebook authorization
+> Fixed Twitter authorization
+> Fixed VK authorization
+> Disabled autostart
+> Enabled High Quality Audio
+> Enabled High Quality Video
+> Hidden root rights
+> Disabled InAppBillingService
+> Disabled all types of Analytics
+> Disabled mandatory login
+> Added author tag for the name of the downloaded file
+> Added ability to download profile pictures
+> Monet app icon for Android 13+
